--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,35 @@
 
   <section id="video-container">
     <video src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" width="500" height="375" controls></video>
+    <span id="text"></span>
   </section>
 
   <footer><a href="https://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">HTML5 Speech Recognition API - Chrome supports</a></footer>
 </body>
 </html>
+
+<script>
+var recognitionOpen = false;
+
+if ('webkitSpeechRecognition' in window) {
+  var recognition = new webkitSpeechRecognition();
+
+  recognition.onstart = function() {
+    recognitionOpen = true;
+  }
+
+  recognition.onresult = function(event) {
+    for (var i = event.resultIndex; i < event.results.length; ++i) {
+      var spokenText = event.results[i][0].transcript;
+
+      document.getElementById('text').innerHTML += spokenText;
+
+      if (spokenText == "play") {
+        document.querySelector("#video-container video").play();
+      }
+    }
+  }
+
+  recognition.start();
+}
+</script>
